[gd_scene load_steps=7 format=3 uid="uid://5xm425cqfqjv"]

[ext_resource type="Script" uid="uid://csvqbkl8h821i" path="res://Scenes/Traps/SpikeBall/spike_ball.gd" id="1_k20sl"]
[ext_resource type="Texture2D" uid="uid://cmqxxc7b8ps5m" path="res://Assets/Traps/Spiked Ball/Spiked Ball.png" id="2_aitpq"]
[ext_resource type="PackedScene" uid="uid://qat2xyrbafp5" path="res://Scenes/Traps/SpikeBall/one_chain.tscn" id="3_intyl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b3lyn"]
radius = 13.0096

[sub_resource type="Animation" id="Animation_qkyjt"]
resource_name = "regular_move"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvtsx"]
_data = {
&"regular_move": SubResource("Animation_qkyjt")
}

[node name="SpikeBall" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_k20sl")

[node name="OneChain" parent="." instance=ExtResource("3_intyl")]

[node name="SpikedBall" type="Sprite2D" parent="."]
position = Vector2(0, 14)
texture = ExtResource("2_aitpq")

[node name="BallArea" type="Area2D" parent="SpikedBall"]
visible = false
position = Vector2(0, -16)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikedBall/BallArea"]
position = Vector2(0, 17)
shape = SubResource("CircleShape2D_b3lyn")

[node name="FloorChecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 32)

[node name="RotateAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lvtsx")
}

[connection signal="body_entered" from="SpikedBall/BallArea" to="." method="_on_ball_area_body_entered"]
